--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Login to DockerHub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build TCP/IP traffic generator Docker image
-        run: docker build Packet-Generator/server/ -t $REPO:latest
-      - name: Push TCP/IP traffic generator Docker image
-        run: docker push $REPO:latest
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - name: Build TCP/IP Traffic Generator image
+        run: docker build -f Packet-Generator/server/Dockerfile -t $REPO:latest -t $REPO:${{ github.sha }} .
+      - name: Push image to DockerHub
+        run: docker push $REPO
