--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,18 +13,13 @@ jobs:
       IMAGE_TAG: ${{ github.sha }}
     steps:
       - uses: actions/checkout@v2
-      - name: Login to DockerHub
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker Hub
         run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - name: Build TCP/IP Traffic Generator image
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         run: |
           cd Packet-Generator/server
-          docker build -t $DOCKER_USERNAME/packet-generator:latest -t $DOCKER_USERNAME/packet-generator:$IMAGE_TAG .
-      - name: Push image to DockerHub
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/packet-generator:latest -t ${{ secrets.DOCKER_USERNAME }}/packet-generator:${{ github.sha }} .
+      - name: Push image to Docker Hub
         run: |
-          docker push $DOCKER_USERNAME/packet-generator:latest
-          docker push $DOCKER_USERNAME/packet-generator:$IMAGE_TAG
+          docker push ${{ secrets.DOCKER_USERNAME }}/packet-generator:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/packet-generator:${{ github.sha }}
