Update docker compose file

--- a/Packet-Generator/server/docker-compose.yml
+++ b/Packet-Generator/server/docker-compose.yml
@@ -14,5 +14,6 @@ services:
     network_mode: "host"
     volumes:
       - ${PWD}/tcpdump:/tcpdump
+    command: -i any -w /tcpdump/network-traffic.pcap
     depends_on:
       - packet-generator
