--- a/Packet-Generator/server/Makefile
+++ b/Packet-Generator/server/Makefile
@@ -17,5 +17,17 @@ run:
 clean:
 	cargo clean
 
+compose-up:
+	docker compose up -d
+
+compose-down:
+	docker compose down && rm -rf ./tcpdump
+
+compose-start:
+	docker compose start
+
+compose-stop:
+	docker compose stop && rm -rf ./tcpdump
+
 help:
-	@echo "make <build-dbg|run-dbg|build|run|clean|help>"
+	@echo "make <build-dbg|run-dbg|build|run|clean|compose-up|compose-down|help>"
