Add instruction to recreate the docker compose

--- a/Packet-Generator/server/Makefile
+++ b/Packet-Generator/server/Makefile
@@ -29,5 +29,8 @@ compose-start:
 compose-stop:
 	docker compose stop && rm -rf ./tcpdump
 
+compose-recreate:
+	docker compose down && docker image prune -a -f && docker compose up -d
+
 help:
 	@echo "make <build-dbg|run-dbg|build|run|clean|compose-up|compose-down|help>"
