Update Makefile help output

--- a/Packet-Generator/server/Makefile
+++ b/Packet-Generator/server/Makefile
@@ -33,4 +33,4 @@ compose-recreate:
 	docker compose down && docker image prune -a -f && docker compose up -d
 
 help:
-	@echo "make <build-dbg|run-dbg|build|run|clean|compose-up|compose-down|help>"
+	@echo "make <build-dbg|run-dbg|build|run|clean|compose-up|compose-down|compose-start|compose-stop|compose-recreate|help>"
