Make local volume relative to where the docker compose command is run

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     container_name: traffic-capture
     network_mode: "host"
     volumes:
-      - $${PWD}/tcpdump:/tcpdump
+      - ./tcpdump:/tcpdump
     command: -i any -w /tcpdump/network-traffic.pcap
     depends_on:
       - packet-generator
