--- a/Traffic-Monitor/Dockerfile
+++ b/Traffic-Monitor/Dockerfile
@@ -5,6 +5,6 @@ RUN apk add --update --no-cache tcpdump && \
 
 VOLUME [ "/tcpdump" ]
 
-ENTRYPOINT [ "/usr/sbin/tcpdump" ]
+ENTRYPOINT [ "/usr/bin/tcpdump" ]
 
 CMD [ "-C", "1000", "-v", "-i", "any", "-w", "/tcpdump/tcpdump.pcap" ]
