--- a/Packet-Generator/server/Cargo.toml
+++ b/Packet-Generator/server/Cargo.toml
@@ -13,5 +13,6 @@ ctrlc = { version = "^3", features = ["termination"] } # To handle Ctrl+C to sto
 dotenv = "^0.15" # To load the environment variables
 env_logger = "^0.9" # To log the data
 local_ipaddress = "^0.1" # To get the local IP address
+rand = "^0.8" # To generate random data
 serde = { version = "^1", features = ["derive"] } # To serialize and deserialize the data
 socket2 = { version = "^0.4", features = ["all"] } # To create the raw socket
