--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build TCP/IP Traffic Monitor image
         run: |
-          cd Traffic-Monitor
+          cd Traffic-Monitor/TCP-Dump
           docker build -t ${{ secrets.DOCKER_USERNAME }}/packet-monitor:latest .
       - name: Push image to Docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/packet-monitor:latest
