--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   traffic-generator-image:
-    name: Publish latest Docker image
+    name: Publish latest TCP/IP traffic generator image
     runs-on: ubuntu-latest
     env:
       IMAGE_TAG: ${{ github.sha }}
@@ -23,7 +23,7 @@ jobs:
         run: docker push ${{ secrets.DOCKER_USERNAME }}/packet-generator:latest
 
   traffic-monitor-image:
-    name: Publish latest Docker image
+    name: Publish latest TCP/IP traffic monitor image
     runs-on: ubuntu-latest
     env:
       IMAGE_TAG: ${{ github.sha }}
