--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,18 @@ services:
     command: -i any -w /tcpdump/network-traffic.pcap
     depends_on:
       - packet-generator
+
+  traffic-analyzer:
+    # image: gabolemus/traffic-analyzer
+    build:
+      context: ./Traffic-Monitor
+      dockerfile: Dockerfile
+    container_name: traffic-analyzer
+    volumes:
+      - ./tcpdump:/tcpdump
+      - ./traffic-analysis:/traffic-analysis
+    depends_on:
+      - packet-generator
+      - tcpdump
+    command:
+      - ./tcpdump/network-traffic.pcap
