--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,19 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/packet-monitor:latest .
       - name: Push image to Docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/packet-monitor:latest
+  
+  traffic-parser-image:
+    name: Publish latest TCP/IP traffic parser image
+    runs-on: ubuntu-latest
+    env:
+      IMAGE_TAG: ${{ github.sha }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build TCP/IP Traffic Parser image
+        run: |
+          cd Traffic-Monitor
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/packet-parser:latest .
+      - name: Push image to Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/packet-parser:latest
