--- a/Packet-Generator/client/package.json
+++ b/Packet-Generator/client/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -20,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write .",
+    "sass": "node-sass ./public/sass/styles.scss ./public/css/styles.css --watch"
   },
   "eslintConfig": {
     "extends": ["react-app", "react-app/jest"]
