Update parser for TypeScript and React files

--- a/Packet-Generator/client/.prettierrc.json
+++ b/Packet-Generator/client/.prettierrc.json
@@ -18,9 +18,16 @@
   "parser": "html",
   "overrides": [
     {
-      "files": ["*.js", "*.jsx", "*.ts", "*.tsx"],
+      "files": ["*.js", "*.jsx"],
       "options": {
         "parser": "babel",
+        "printWidth": 80
+      }
+    },
+    {
+      "files": ["*.ts", "*.tsx"],
+      "options": {
+        "parser": "babel-ts",
         "printWidth": 80
       }
     },
