--- a/Packet-Generator/server/Cargo.toml
+++ b/Packet-Generator/server/Cargo.toml
@@ -8,6 +8,7 @@ name = "packet-generator"
 path = "src/main.rs"
 
 [dependencies]
+actix-cors = "^0.6" # For cross-origin resource sharing
 actix-web = "^4" # To create the web server
 ctrlc = { version = "^3", features = ["termination"] } # To handle Ctrl+C to stop the server gracefully
 dotenv = "^0.15" # To load the environment variables
