--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,19 @@ version: '3.9'
 name: 'ip-spoofing-detector'
 
 services:
-  packet-generator:
+  packet-generator-backend:
     image: gabolemus/packet-generator
-    container_name: packet-generator
+    container_name: packet-generator-backend
     ports:
-      - 8080:8080
+      - 8081:8080
+
+  packet-generator-frontend:
+    image: gabolemus/packet-generator-frontend
+    container_name: packet-generator-frontend
+    ports:
+      - 80:80
+    depends_on:
+      - packet-generator-backend
 
   tcpdump:
     image: gabolemus/packet-monitor
@@ -16,7 +24,7 @@ services:
       - ./tcpdump:/tcpdump
     command: -i any -w /tcpdump/network-traffic.pcap
     depends_on:
-      - packet-generator
+      - packet-generator-backend
 
   traffic-analyzer:
     image: gabolemus/packet-parser
@@ -25,9 +33,11 @@ services:
       - ./tcpdump:/tcpdump
       - ./traffic-analysis:/traffic-analysis
     depends_on:
-      - packet-generator
+      - packet-generator-backend
       - tcpdump
     command:
       - ./tcpdump/network-traffic.pcap
       - -o
       - /traffic-analysis/
+      - -t
+      - '5'
